--- a/PE19/CourseList/CourseList.csproj
+++ b/PE19/CourseList/CourseList.csproj
@@ -52,7 +52,7 @@
       <HintPath>..\CourseLib\bin\Debug\CourseLib.dll</HintPath>
     </Reference>
     <Reference Include="PeopleAppGlobals">
-      <HintPath>..\PeopleAppGlobals\bin\Debug\PeopleAppGlobals.dll</HintPath>
+      <HintPath>bin\Debug\PeopleAppGlobals.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
